--- a/tests/data/column-title.yaml
+++ b/tests/data/column-title.yaml
@@ -1,12 +1,8 @@
----
 $id: table
 
 table:columns:
   - $id: foo
-    title: FOO
+    rdfs:label: FOO
 
 table:rows:
   - foo: bar
----
-
-{{ render('table') }}
