--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "iolanta-tables"
-version = "0.1.3"
+version = "0.1.4"
 description = "Linked Data as tables"
 authors = ["Anatoly Scherbakov <altaisoft@gmail.com>"]
 license = "MIT"
@@ -15,6 +15,7 @@ dominate = "^2.7.0"
 [tool.poetry.group.dev.dependencies]
 jeeves-yeti-pyproject = "^0.2.11"
 beautifulsoup4 = "^4.11.2"
+types-pyyaml = "^6.0.12.9"
 
 [build-system]
 requires = ["poetry-core"]
